--- a/html/index.html
+++ b/html/index.html
@@ -11,9 +11,12 @@
     <script src="/js/react-dom.production.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.38/browser.min.js"></script>
     <script type="text/babel" src="/js/script.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <h1>Hello World!</h1>
     <div id="app"></div>
+    <div id="test1"></div>
+    <div class="test2"></div>
 </body>
 </html>
