--- a/html/index.html
+++ b/html/index.html
@@ -18,5 +18,7 @@
     <div id="app"></div>
     <div id="test1"></div>
     <div class="test2"></div>
+    <div id="message"></div>
+    <div id="app1"></div>
 </body>
 </html>
